# fast-feast

./: LICENSE  README.md
backend/: .dockerignore  .env  .env.example  Dockerfile  check_settings.py  debug_stripe.py  docker-compose.yml  main.py  pyproject.toml  seed.py  seed.sql  test_api.sh  test_e2e.sh  test_import.py
backend/alembic/: env.py
backend/alembic/versions/: 1071962d2e1d_add_category_and_food_item_tables.py  30a0c2cad3f6_add_order_and_order_item_tables.py  632cdd4bd907_add_employee_relationship.py  b354846c2a04_add_stripe_session_id.py  bfe1dbe2e73e_add_shop_table.py  d49c1cbf6513_initial_migration.py  e964a9362b70_add_payment_method_to_order.py
backend/app/core/: config.py
backend/app/domain/: models.py
backend/app/infrastructure/: db.py  media.py  stripe_client.py
backend/frontend/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._tree.txt  _not-found.html  _not-found.txt  index.html  index.txt  login.html  login.txt  public-orders.html  public-orders.txt
backend/frontend/_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._tree.txt
backend/frontend/admin/: dashboard.html  dashboard.txt
backend/frontend/buyer/: dashboard.html  dashboard.txt  item.html  item.txt  orders.html  orders.txt  shop.html  shop.txt
backend/frontend/login/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.login.__PAGE__.txt
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_orders.py  test_payments.py  test_public.py  test_shops.py  test_users.py
(+191 files in other folders)
